# home_work30_django_validators

./: README.md  ads.json  categories.json  db.sqlite3  pyproject.toml
ads/: admin.py  load_data.py  models.py  serializers.py  transfer_from_CSV_to_JSON.py  views.py
ads/fixtures/: ad.json  load_data.py  user.json
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options.py  0002_alter_ad_price.py  0003_alter_ad_image_alter_ad_name.py  0004_alter_ad_options_remove_ad_address.py  0005_selection.py  0006_category_slug_alter_ad_name_alter_ad_price_and_more.py
ads/permissions/: ad.py  selection.py
avito/: asgi.py  settings.py  urls.py
tests/: conftest.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py  selection_create_test.py
tests/factories/: __init__.py  ad.py  user.py
users/: admin.py  load.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_name.py  0003_alter_user_first_name.py  0004_alter_user_age_alter_user_last_name_alter_user_role.py  0005_alter_user_username.py  0006_alter_user_password.py  0007_user_birth_date_user_email.py
validators/: ad.py  users.py
